test/visibility/only/onlyEmpty.good
onlyEmpty.chpl:7: syntax error: near ';'
